[package]
name = "procrs"
version = "0.2.0"
authors = ["Josh Driver <keeperofdakeys@gmail.com>"]
description = "Linux process query command and library"
repository = "https://github.com/keeperofdakeys/Process-Query"
readme = "README.md"


[dependencies]
getopts = "0.2"
prettytable-rs = "0.6"
argparse = "0.2"

[[bin]]
name="psq"
path="src/psq/main.rs"

[[bin]]
name="freer"
path="src/freer/main.rs"

[lib]
name="procrs"
path="src/procrs/lib.rs"
